[220418] Include line number info in QVT problem markers